--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
   },
   "dependencies": {
     "browserify-shim": "^3.8.14",
-    "css-img-datauri-stream": "^0.1.5",
     "cssify": "^1.0.3",
-    "leaflet": ">=0.7.7 <2.0.0"
+    "leaflet": "^1.6.0"
   },
   "repository": {
     "type": "git",
